--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "picostring"
 description = "A stack allocated string that requires no extra space to store length."
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 license = "Unlicense"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = { version = "1.0.188", optional = true }
+
+[features]
+serde = ["dep:serde"]
